# rickjames

./: README
signal/: Cargo.toml
signal/p_samples/ele/: ele4.npy
signal/p_samples/rk/: rk7.npy
signal/samples/.comments/: test2mono.wav.xml
signal/src/: fft.rs  ifft.rs  lib.rs  main.rs  mask.rs  normal.rs
