# Implement NMF using alternating minimisation
# Decompose magnitude spectrogram
# Assign basis vectors to sources manually
# Apply mask and reconstruct
#
# Add CLI args or config
# Plot spectrograms with plotters
# Optional: egui UI to view spectrum in real time
# Package + write README

[package]
name = "signal"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
hound = "3.5.1"
plotters = "0.3.7"
rustfft = "6.4.0"
