[package]
name = "signal"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "don"
path = "src/bin/don.rs"

[[bin]]
name = "pp"
path = "src/bin/pp.rs"

[dependencies]
anyhow = "1.0.98"
hound = "3.5.1"
ndarray = "0.16.1"
ndarray-npy = "0.9.1"
npy = "0.4.0"
numpy = "0.25.0"
# npy = "0.4.0"
plotters = "0.3.7"
rand = "0.9.2"
rustfft = "6.4.0"
